--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,11 @@ img {
   color: var(--color-white-background);
   background-color: var(--color-dark);
   padding: 188px 0;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
 }
 .hero-title {
   text-align: center;
