--- a/css/styles.css
+++ b/css/styles.css
@@ -365,3 +365,27 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.castomers-card-set {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.castomers-item {
+  flex-basis: calc((100% - 120px) / 6);
+  padding: 16px 32px;
+  border-radius: 4px;
+  border: 1px solid var(--color-subtle-text);
+  width: 168px;
+  height: 88px;
+  flex-shrink: 0;
+}
+.castomers-item:hover,
+.castomers-item:focus {
+  color: var(--color-pressed-state);
+}
+
+.castomers-section {
+  padding: 120px 0;
+}
