--- a/css/styles.css
+++ b/css/styles.css
@@ -425,3 +425,30 @@ img {
 .team-social-item:focus {
   fill: var(--color-pressed-state);
 }
+.footer-social-item {
+  fill: var(--color-primary-brand);
+}
+.footer-social-item:hover,
+.footer-social-item:focus {
+  fill: var(--color-success);
+}
+.footer-social-set {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  padding-left: 120px;
+}
+.footer-container {
+  display: flex;
+  justify-content: flex-start;
+}
+.social-media-text {
+  color: var(--color-white-background);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5em;
+  letter-spacing: 0.32px;
+  padding-left: 120px;
+  padding-bottom: 16px;
+}
