--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,9 @@ img {
       rgba(46, 47, 66, 0.7)
     ),
     url(../images/people-office.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 .hero-title {
   text-align: center;
