--- a/css/styles.css
+++ b/css/styles.css
@@ -175,6 +175,7 @@ img {
   height: 56px;
   border: none;
   margin: 0 auto;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -404,12 +405,7 @@ img {
   border-color: var(--color-pressed-state);
   fill: var(--color-pressed-state);
 }
-.advantage-box {
-  /*border: 1px solid var(--color-subtle-text);*/
-  border-radius: 4px;
-  background: var(--color-light);
-  padding: 24px 100px;
-}
+
 .line {
   position: relative;
   color: var(--color-pressed-state);
@@ -448,7 +444,6 @@ img {
   display: flex;
   flex-wrap: wrap;
   gap: 16px;
-  padding-left: 120px;
 }
 .footer-container {
   display: flex;
@@ -461,6 +456,18 @@ img {
   font-weight: 500;
   line-height: 1.5em;
   letter-spacing: 0.32px;
-  padding-left: 120px;
-  padding-bottom: 16px;
+  margin-bottom: 16px;
+}
+.footer-logo-container {
+  align-items: baseline;
+  margin-right: 120px;
+}
+.advantage-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: var(--color-light);
+  border-radius: 4px;
+  margin-bottom: 8px;
 }
