--- a/css/styles.css
+++ b/css/styles.css
@@ -175,7 +175,7 @@ img {
   height: 56px;
   border: none;
   margin: 0 auto;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -426,20 +426,7 @@ img {
   gap: 24px;
   justify-content: center;
 }
-.team-social-item {
-  fill: var(--color-primary-brand);
-}
-.team-social-item:hover,
-.team-social-item:focus {
-  fill: var(--color-pressed-state);
-}
-.footer-social-item {
-  fill: var(--color-primary-brand);
-}
-.footer-social-item:hover,
-.footer-social-item:focus {
-  fill: var(--color-success);
-}
+
 .footer-social-set {
   display: flex;
   flex-wrap: wrap;
@@ -470,4 +457,32 @@ img {
   background-color: var(--color-light);
   border-radius: 4px;
   margin-bottom: 8px;
+}
+.team-social-icon,
+.footer-social-icon {
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-primary-brand);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.team-social-icon:hover,
+.team-social-icon:focus {
+  background-color: var(--color-pressed-state);
+}
+.team-socials {
+  height: 40px;
+  width: 40px;
+}
+
+.footer-social-icon:hover,
+.footer-social-icon:focus {
+  background-color: var(--color-success);
+  fill: var(--color-light);
+}
+.footer-socials {
+  height: 40px;
+  width: 40px;
 }
