--- a/css/styles.css
+++ b/css/styles.css
@@ -467,6 +467,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-social-icon:hover,
 .team-social-icon:focus {
@@ -485,4 +486,7 @@ img {
 .footer-socials {
   height: 40px;
   width: 40px;
+}
+.social-svg {
+  fill: var(--color-light);
 }
