--- a/css/styles.css
+++ b/css/styles.css
@@ -435,6 +435,7 @@ img {
 .footer-container {
   display: flex;
   justify-content: flex-start;
+  align-items: baseline;
 }
 .social-media-text {
   color: var(--color-white-background);
