--- a/css/styles.css
+++ b/css/styles.css
@@ -388,6 +388,7 @@ img {
 
 .castomers-item {
   flex-basis: calc((100% - 120px) / 6);
+  height: 88px;
 }
 .castomers-item:hover,
 .castomers-item:focus {
@@ -398,18 +399,7 @@ img {
   padding: 120px 0;
 }
 .castomers-box {
-  padding: 16px 32px;
-  border-radius: 4px;
-  border: 1px solid var(--color-subtle-text);
-  width: 168px;
-  height: 88px;
-  fill: var(--color-subtle-text);
-  flex-shrink: 0;
-}
-.castomers-box:hover,
-.castomers-box:focus {
-  border-color: var(--color-pressed-state);
-  fill: var(--color-pressed-state);
+  fill: currentColor;
 }
 
 .line {
@@ -496,4 +486,21 @@ img {
 }
 .social-svg {
   fill: var(--color-light);
+}
+.castomer-link {
+  width: 100%;
+  height: 100%;
+  border: 1px solid var(--color-subtle-text);
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--color-subtle-text);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.castomer-link:hover,
+.castomer-link:focus {
+  border-color: var(--color-pressed-state);
+  color: var(--color-pressed-state);
 }
