--- a/css/styles.css
+++ b/css/styles.css
@@ -518,7 +518,7 @@ img {
   position: relative;
   overflow: hidden;
 }
-.portfolio-paragraph {
+.overlay {
   position: absolute;
   top: 0;
   font-size: 16px;
@@ -531,4 +531,7 @@ img {
   width: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-image:hover .overlay {
+  transform: translateY(0);
 }
