--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,7 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  max-width: 1440px;
 }
 .hero-title {
   text-align: center;
@@ -532,7 +533,8 @@ img {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-image:hover .overlay {
+.portfolio-image:hover .overlay,
+.portfolio-image:focus {
   transform: translateY(0);
 }
 .modal-window {
