--- a/css/styles.css
+++ b/css/styles.css
@@ -533,8 +533,7 @@ img {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-image:hover .overlay,
-.portfolio-image:focus {
+.portfolio-image:hover .overlay {
   transform: translateY(0);
 }
 .modal-window {
