--- a/css/styles.css
+++ b/css/styles.css
@@ -533,8 +533,9 @@ img {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-image:hover .overlay {
-  transform: translateY(0);
+.portfolio-image:hover .overlay,
+.portfolio-image:focus .overlay {
+  transform: translateY(0%);
 }
 .modal-window {
   position: fixed;
