--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ ol {
   margin: 0;
 }
 .container {
-  max-width: 1440px;
+  /* max-width: 1440px;*/
   margin: 0 auto;
   width: 1158px;
   padding-left: 15px;
@@ -509,7 +509,11 @@ img {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-link:hover,
+.portfolio-link:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0%);
+}
 .portfolio-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -533,10 +537,9 @@ img {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-image:hover .overlay,
-.portfolio-image:focus .overlay {
-  transform: translateY(0%);
-}
+/*.portfolio-image:hover .overlay {
+  transform: translateY(0);
+}*/
 .modal-window {
   position: fixed;
   top: 0;
