--- a/css/styles.css
+++ b/css/styles.css
@@ -381,25 +381,25 @@ img {
   overflow: hidden;
 }
 
-.castomers-card-set {
+.customers-card-set {
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
 }
 
-.castomers-item {
+.customers-item {
   flex-basis: calc((100% - 120px) / 6);
   height: 88px;
 }
-.castomers-item:hover,
-.castomers-item:focus {
+.customers-item:hover,
+.customers-item:focus {
   color: var(--color-pressed-state);
 }
 
-.castomers-section {
+.customers-section {
   padding: 120px 0;
 }
-.castomers-box {
+.customers-box {
   fill: currentColor;
 }
 
@@ -488,7 +488,7 @@ img {
 .social-svg {
   fill: var(--color-light);
 }
-.castomer-link {
+.customer-link {
   width: 100%;
   height: 100%;
   border: 1px solid var(--color-subtle-text);
@@ -500,8 +500,8 @@ img {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.castomer-link:hover,
-.castomer-link:focus {
+.customer-link:hover,
+.customer-link:focus {
   border-color: var(--color-pressed-state);
   color: var(--color-pressed-state);
 }
@@ -533,10 +533,10 @@ img {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-image:hover .overlay {
+.portfolio-link:hover .overlay {
   transform: translateY(0%);
 }
-.portfolio-image:focus .overlay {
+.portfolio-link:focus .overlay {
   transform: translateY(0%);
 }
 .modal-window {
