--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,7 @@ img {
   background-position: center;
   background-size: cover;
   max-width: 1440px;
+  margin: 0 auto;
 }
 .hero-title {
   text-align: center;
